--- a/Zero_shot_Learning/Notebook/GloVe (Global Vectors for Word Representation) model.ipynb
+++ b/Zero_shot_Learning/Notebook/GloVe (Global Vectors for Word Representation) model.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 105,
    "id": "8136f5e4",
    "metadata": {},
    "outputs": [],
@@ -141,12 +141,21 @@
     "#     print(path.split('\\\\')[-1])\n",
     "#     # break\n",
     "\n",
-    "corpus_file = 'CUB_corpus_test.txt'\n",
+    "corpus_file = 'CUB_corpus.txt'\n",
     "corpus_file_path = os.path.join('GoogleNews_vectors_negative300', 'corpus', corpus_file)\n",
     "\n",
     "with open(corpus_file_path, \"a\") as f:\n",
     "    for path in glob.glob(os.path.join('..', 'Dataset', 'CUB_KMean_Dataset', 'images', '*')):\n",
-    "        f.write(path.split('\\\\')[-1].replace('_', ' ') + '\\n')\n",
+    "        # f.write(path.split('\\\\')[-1].replace('_', ' ') + ' ' + path.split('\\\\')[-1] + '. \\n')\n",
+    "        # f.write(\"'\" + path.split('\\\\')[-1] + \"'\" + ' is ' + path.split('\\\\')[-1].replace('_', ' ') + '\\n')\n",
+    "        f.write(\"{} {} {} {} {} {} \\n\".format(path.split('\\\\')[-1], \n",
+    "                                           path.split('\\\\')[-1].replace('_', ' '), \n",
+    "                                           path.split('\\\\')[-1].replace('_', ' ').lower(), \n",
+    "                                           path.split('\\\\')[-1].replace('_', ''), \n",
+    "                                           path.split('\\\\')[-1].replace('_', '').lower(),\n",
+    "                                           path.split('\\\\')[-1].lower()\n",
+    "                                          )\n",
+    "               )\n",
     "        "
    ]
   },
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 106,
    "id": "0d095d5d",
    "metadata": {},
    "outputs": [
@@ -205,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word2Vec model saved as 'custom_word2vec.bin'\n"
+      "Word2Vec<vocab=637, vector_size=300, alpha=0.006698500000000001> : Word2Vec model saved as 'custom_word2vec.bin'\n"
      ]
     }
    ],
@@ -220,31 +229,142 @@
     "corpus_file = corpus_file_path  # Replace with your text corpus file\n",
     "with open(corpus_file, 'r', encoding='utf-8') as f:\n",
     "    sentences = [line.strip().split() for line in f]  # Tokenize sentences\n",
+    "    \n",
+    "# print(f\"sentences : {sentences}\")\n",
     "\n",
     "# Train Word2Vec model\n",
     "model = Word2Vec(\n",
     "    sentences,\n",
     "    vector_size=300,  # Number of dimensions for the embeddings\n",
-    "    window=5,         # Context window size\n",
-    "    min_count=5,      # Minimum word frequency to include in the vocabulary\n",
+    "    window=2,         # Context window size\n",
+    "    min_count=1,      # Minimum word frequency to include in the vocabulary\n",
     "    workers=4         # Number of threads\n",
     ")\n",
     "\n",
-    "# # Build the vocabulary\n",
-    "# model.build_vocab(sentences)\n",
+    "# Build the vocabulary\n",
+    "model.build_vocab(sentences)\n",
     "\n",
-    "# # Train the Word2Vec model\n",
-    "# model.train(sentences, total_examples=model.corpus_count, epochs=model.epochs)\n",
+    "# Train the Word2Vec model\n",
+    "model.train(sentences, \n",
+    "            total_examples=model.corpus_count, \n",
+    "            epochs=1000, # model.epochs, \n",
+    "            start_alpha=(model.min_alpha + (53/200 * (model.alpha - model.min_alpha)))\n",
+    "           )\n",
     "\n",
     "# Save the model in binary format\n",
     "model.wv.save_word2vec_format(save_word2vec_file_path, binary=True)\n",
-    "print(\"Word2Vec model saved as 'custom_word2vec.bin'\")\n"
+    "print(f\"{model} : Word2Vec model saved as 'custom_word2vec.bin'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fa51e35",
+   "metadata": {},
+   "source": [
+    "### Get top similar words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "b73dad97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import KeyedVectors\n",
+    "\n",
+    "def get_top_similar_words(model_path, word, top_n=10):\n",
+    "    \"\"\"\n",
+    "    Load a Word2Vec model and get the top N similar words for a given input word.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        model_path (str): Path to the pre-trained Word2Vec binary model.\n",
+    "        word (str): The word for which to find similar words.\n",
+    "        top_n (int): Number of similar words to retrieve (default is 10).\n",
+    "        \n",
+    "    Returns:\n",
+    "        list of tuples: List of top N similar words with their similarity scores.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Load the Word2Vec model\n",
+    "        print(f\"Loading model from: {model_path}\")\n",
+    "        model = KeyedVectors.load_word2vec_format(model_path, binary=True)\n",
+    "        print(f\"{model} : Model loaded successfully.\")\n",
+    "        \n",
+    "        # Get top N similar words\n",
+    "        if word in model.key_to_index:\n",
+    "            similar_words = model.most_similar(word, topn=top_n)\n",
+    "            return similar_words\n",
+    "        else:\n",
+    "            print(f\"The word '{word}' is not in the model's vocabulary.\")\n",
+    "            return []\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "63ebded1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from: GoogleNews_vectors_negative300\\corpus\\custom_word2vec.bin\n",
+      "KeyedVectors<vector_size=300, 637 keys> : Model loaded successfully.\n",
+      "Top 10 words similar to 'American_Crow':\n",
+      "american: 0.9887734651565552\n",
+      "Crow: 0.9843868017196655\n",
+      "American: 0.9777670502662659\n",
+      "Redstart: 0.9634098410606384\n",
+      "Pipit: 0.9597547054290771\n",
+      "American_Pipit: 0.9578816294670105\n",
+      "crow: 0.9577349424362183\n",
+      "American_Redstart: 0.9553117752075195\n",
+      "fish: 0.9270606637001038\n",
+      "Fish: 0.9160103797912598\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Replace with the actual path to your model\n",
+    "model_path = save_word2vec_file_path # 'GoogleNews_vectors_negative300/corpus/custom_word2vec.bin'\n",
+    "\n",
+    "# Input word to find similar words for\n",
+    "input_word = 'American_Crow'  # 'American_Crow' 'Gull'\n",
+    "\n",
+    "# Get top 10 similar words\n",
+    "similar_words = get_top_similar_words(model_path, input_word)\n",
+    "\n",
+    "if similar_words:\n",
+    "    print(f\"Top 10 words similar to '{input_word}':\")\n",
+    "    for word, score in similar_words:\n",
+    "        print(f\"{word}: {score}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50c2755e",
+   "id": "68813286",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75a07bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc5d20c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -312,22 +432,6 @@
     "# ----\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b73dad97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63ebded1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
