added sort date code
added sort date code

--- a/Notes/01_Python/Python_Basic_Concepts/unzip_rar.ipynb
+++ b/Notes/01_Python/Python_Basic_Concepts/unzip_rar.ipynb
@@ -180,6 +180,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted Dates: ['28/10/2024', '30/10/2024', '14/11/2024', '21/11/2024', '21/11/2024', '29/11/2024', '2/12/2024', '2/12/2024', '2/12/2024', '9/12/2024', '11/12/2024', '16/12/2024']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "date_list = ['29/11/2024', '14/11/2024', '21/11/2024', '2/12/2024', \n",
+    "             '30/10/2024', '28/10/2024', '16/12/2024', '11/12/2024', \n",
+    "             '2/12/2024', '2/12/2024', '21/11/2024', '9/12/2024']\n",
+    "\n",
+    "def sort_dates_by_day(date_list):\n",
+    "    \"\"\"\n",
+    "    Sort a list of date strings by the day of the month.\n",
+    "    \n",
+    "    Args:\n",
+    "        date_list (list): List of date strings in 'dd/mm/yyyy' or similar formats.\n",
+    "        \n",
+    "    Returns:\n",
+    "        list: A sorted list of date strings based on the day of the month.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Convert strings to datetime objects and sort by day\n",
+    "        # sorted_dates = sorted(date_list, key=lambda x: datetime.strptime(x, '%d/%m/%Y').day, reverse=True)\n",
+    "        # sorted_dates = sorted(date_list, key=lambda x: (datetime.strptime(x, '%d/%m/%Y').day, datetime.strptime(x, '%d/%m/%Y')))\n",
+    "        sorted_dates = sorted(date_list, key=lambda x: datetime.strptime(x, '%d/%m/%Y'))\n",
+    "        return sorted_dates\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error in date format: {e}\")\n",
+    "        return []\n",
+    "\n",
+    "# Example Usage\n",
+    "# date_list = ['2/12/2024', '9/12/2024', '11/12/2024', '14/11/2024', \n",
+    "#              '16/12/2024', '21/11/2024', '28/10/2024', '30/10/2024']\n",
+    "\n",
+    "sorted_list = sort_dates_by_day(date_list)\n",
+    "print(\"Sorted Dates:\", sorted_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
